--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
     "react-tsparticles": "^1.37.3",
     "web-vitals": "^1.1.2"
   },
