--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
     "react-tsparticles": "^1.37.3",
+    "reactive-button": "^1.3.12",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
