--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-dom": "^17.0.2",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^3.0.1",
     "react-spinners": "^0.11.0",
     "react-tsparticles": "^1.37.3",
     "reactive-button": "^1.3.12",
